--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
         <li><p>Typescript (preprocessor)</p></li>
     </ol>
     <br>
-    <p style="text-align: center;">All Copyright &copy; Reserved to Ronit Guleria</p>
+    <p style="text-align: center;">All Copyrights &copy; Reserved to Ronit Guleria</p>
 </body>
 </html>
