--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             href="https://en.wikipedia.org/wiki/JavaScript">JavaScript</a>. so that users can view and interact with
         that website.</H1>
     </p>
-    <img src="./images/html-css-javascript.png" alt="HTML CSS JavaScript png" width="600">
+    <img src="html-css-javascript.png" alt="HTML CSS JavaScript png" width="600">
     <ul>
         <li><b>HTML</b>: The HyperText Markup Language or HTML is the standard markup language for documents designed to
             be displayed in web browser.</li>
@@ -25,7 +25,7 @@
         <li><b>CSS</b>: Cascading Style Sheets(CSS) is a style sheet language used for describing the presentation of a
             document written in a markup language like HTML or XML</li>
     </ul>
-    <img src="./images/css.png" alt="CSS png" width="600">
+    <img src="css.png" alt="CSS png" width="600">
     <ol>
         <li><p>Pure CSS</p></li>
         <li><p>Bootstrap (framework)</p></li>
@@ -38,7 +38,7 @@
             technologies of the World Wide Web, alongside HTML and CSS. it is use to add functionality in the website.
         </li>
     </ul>
-    <img src="./images/transparent-html-css-javascript.png" alt="JavaScript" width="600">
+    <img src="transparent-html-css-javascript.png" alt="JavaScript" width="600">
     <br>
     <ol>
         <li><p>Vanilla JS</p></li>
